--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title> A whale of a greeting</title>
     </head>
     <body>
     <h1> hello, world </h1>
     <p> Call me Ishmeal.</p>
-    </body>body>
+    </body>
 </html>
