--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
     <h1> hello, world </h1>
     <p> Call me Ishmeal.</p>
+    <img src="/Users/allienishimi/images/breaching_whale.jpg" alt="Description" />
     </body>
 </html>
