--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
     <h1> hello, world </h1>
+        <a href="about.html">About this project</a>
     <p> Call me Ishmeal.</p>
     <img src="/Users/allienishimi/Desktop/website/images/breaching_whale.jpg" alt="Description" />
     </body>
